add social component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,48 +49,7 @@
     <div class="section-content">
       <h1 class="display-4">Social</h1>
       <p *ngIf="homepageData">{{this.homepageData.socialText}}</p>
-      <div class="social-grid">
-        <div class="social-channel">
-          <a href="https://www.twitch.tv/mtperformance_esport" target="_blank">
-            <svg class="social-icon" width="32" height="32" fill="currentColor">
-              <use xlink:href="assets/icons/bootstrap-icons.svg#twitch"/>
-            </svg>
-            <div>Twitch</div>
-          </a>
-        </div>
-        <div class="social-channel">
-          <a href="https://www.youtube.com/channel/UC3XwCeDU5IOwYUVyybEoZKQ" target="_blank">
-            <svg class="social-icon" width="32" height="32" fill="currentColor">
-              <use xlink:href="assets/icons/bootstrap-icons.svg#youtube"/>
-            </svg>
-            <div>Youtube</div>
-          </a>
-        </div>
-        <div class="social-channel">
-          <a href="https://www.facebook.com/MTPTobias" target="_blank">
-            <svg class="social-icon" width="32" height="32" fill="currentColor">
-              <use xlink:href="assets/icons/bootstrap-icons.svg#facebook"/>
-            </svg>
-            <div>Facebook</div>
-          </a>
-        </div>
-        <div class="social-channel">
-          <a href="https://www.instagram.com/mt_performance15" target="_blank">
-            <svg class="social-icon" width="32" height="32" fill="currentColor">
-              <use xlink:href="assets/icons/bootstrap-icons.svg#instagram"/>
-            </svg>
-            <div>Instagram</div>
-          </a>
-        </div>
-        <div class="social-channel">
-          <a href="https://discord.com" target="_blank">
-            <svg class="social-icon" width="32" height="32" fill="currentColor">
-              <use xlink:href="assets/icons/bootstrap-icons.svg#discord"/>
-            </svg>
-            <div>Discord</div>
-          </a>
-        </div>
-      </div>
+      <app-social></app-social>
     </div>
   </section>
 </div>
