--- a/src/app/components/sponsor/sponsor.component.html
+++ b/src/app/components/sponsor/sponsor.component.html
@@ -4,6 +4,6 @@
       <img src="{{'https://strapi-l8cn-f0jv.onrender.com' + sponsor.logo.url}}" width="100%" height="auto">
     </a>
     <h5>{{sponsor.name}}</h5>
-    <p>{{sponsor.description}}</p>
+    <p [innerHTML]="sponsor.description | markdown"></p>
   </div>
 </div>
