--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="title">
     <div class="title-left">
-      <img src="/assets/logo.png">
+      <img src="/assets/logo.png" alt="MT-Performance Logo">
       <div *ngIf="homepageData">{{this.homepageData.title}}</div>
     </div>
     <div class="navigation">
