--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -4,7 +4,7 @@
   </ol>
   <div class="carousel-inner">
     <div *ngFor="let image of images; let i = index" class="carousel-item" [class.active]="i === 0">
-      <img [src]="prependUrl(image)" class="d-block w-100" alt="...">
+      <img [src]="prependUrl(image)" class="d-block w-100" alt="{{image.alternativeText}}">
     </div>
   </div>
 </div>
