--- a/src/app/components/sponsor/sponsor.component.html
+++ b/src/app/components/sponsor/sponsor.component.html
@@ -1,7 +1,7 @@
 <div class="sponsor-container">
   <div class="sponsor" *ngFor="let sponsor of sponsors">
     <a href="{{sponsor.link}}" target="_blank">
-      <img src="{{'https://strapi-l8cn-f0jv.onrender.com' + sponsor.logo.url}}" width="100%" height="auto">
+      <img src="{{'https://strapi-l8cn-f0jv.onrender.com' + sponsor.logo.url}}" width="100%" height="auto" alt="{{sponsor.logo.alternativeText}}">
     </a>
     <h5>{{sponsor.name}}</h5>
     <p [innerHTML]="sponsor.description | markdown"></p>
