--- a/src/app/components/drivers/drivers.component.scss
+++ b/src/app/components/drivers/drivers.component.scss
@@ -1,15 +1,19 @@
 .driver-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr;
+  grid-gap: 8px 8px;
 }
 
 app-driver {
-  width: 50%;
-  padding: 8px;
+  height: 1fr;
 }
 
 @media screen and (max-width:960px) {
+  .driver-container {
+    grid-template-columns: 1fr;
+  }
+
   app-driver {
     width: 100%;
   }
