--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -80,6 +80,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   z-index: 9;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .title-left {
