--- a/src/app/components/driver/driver.component.html
+++ b/src/app/components/driver/driver.component.html
@@ -1,13 +1,19 @@
-<div class="card flex-column flex-wrap">
-  <div *ngIf="driver.image" class="card-header border-0">
-    <img src="{{'https://strapi-l8cn-f0jv.onrender.com' + driver.image.formats.thumbnail.url}}" alt="{{driver.image.alternativeText}}">
+<div class="driver-card">
+  <div class="driver-card-header">
+    <div class="driver-image-wrapper">
+      <img class="driver-image" src="{{'https://strapi-l8cn-f0jv.onrender.com' + driver.image.formats.thumbnail.url}}" alt="{{driver.image.alternativeText}}">
+    </div>
+    <div class="driver-name-wrapper">
+      <p class="driver-name">{{driver.name}}</p>
+      <p class="driver-role category-headline">{{driver.Rolle}}</p>
+    </div>
   </div>
-  <div class="card-block px-2">
-    <h4 class="card-title">{{driver.name}}</h4>
-    <p class="card-text">Rolle: {{driver.Rolle}}</p>
-    <p *ngIf="driver.description" class="card-text" [innerHTML]="'Beschreibung: ' + driver.description | markdown"></p>
-    <p class="card-text">Wohnort: {{driver.Wohnort}}</p>
-    <p *ngIf="driver.Hardware" class="card-text" [innerHTML]="'Hardware: ' + driver.Hardware | markdown"></p>
-    <p *ngIf="driver.iRating" class="card-text">iRating: {{driver.iRating}}</p>
+  <div class="driver-card-body">
+    <p class="category-headline" *ngIf="driver.description">Beschreibung</p>
+    <p *ngIf="driver.description" class="card-text" [innerHTML]="driver.description | markdown"></p>
+    <p class="category-headline" *ngIf="driver.Wohnort">Wohnort</p>
+    <p class="card-text">{{driver.Wohnort}}</p>
+    <p class="category-headline" *ngIf="driver.Hardware">Hardware</p>
+    <p *ngIf="driver.Hardware" class="card-text" [innerHTML]="driver.Hardware | markdown"></p>
   </div>
 </div>
