--- a/src/app/components/drivers/drivers.component.scss
+++ b/src/app/components/drivers/drivers.component.scss
@@ -1,6 +1,6 @@
 .driver-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr;
   grid-gap: 8px 8px;
 }
@@ -9,12 +9,20 @@ app-driver {
   height: 1fr;
 }
 
-@media screen and (max-width:960px) {
+@media screen and (max-width:1500px) {
   .driver-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
   }
 
   app-driver {
     width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width:960px) {
+  .driver-container {
+    grid-template-columns: 1fr;
   }
 }
