--- a/src/app/components/driver/driver.component.html
+++ b/src/app/components/driver/driver.component.html
@@ -1,7 +1,7 @@
 <div class="driver-card">
   <div class="driver-card-header">
     <div class="driver-image-wrapper">
-      <img class="driver-image" src="{{driver.image.fields.file.url}}" alt="{{driver.image.fields.file.fileName}}">
+      <img class="driver-image" src="{{driver.image.fields.file.url + '?fm=webp&w=100'}}" alt="{{driver.image.fields.file.fileName}}">
     </div>
     <div class="driver-name-wrapper">
       <p class="driver-name">{{driver.name}}</p>
