--- a/src/app/components/drivers/drivers.component.html
+++ b/src/app/components/drivers/drivers.component.html
@@ -1,3 +1,3 @@
 <div class="driver-container">
-  <app-driver *ngFor="let driver of drivers2" [driver]="driver.fields"></app-driver>
+  <app-driver *ngFor="let driver of drivers" [driver]="driver.fields"></app-driver>
 </div>
