--- a/src/app/components/sponsor/sponsor.component.html
+++ b/src/app/components/sponsor/sponsor.component.html
@@ -1,9 +1,9 @@
 <div class="sponsor-container">
   <div class="sponsor" *ngFor="let sponsor of sponsors">
-    <a href="{{sponsor.link}}" target="_blank">
-      <img src="{{'https://strapi-l8cn-f0jv.onrender.com' + sponsor.logo.url}}" width="100%" height="auto" alt="{{sponsor.logo.alternativeText}}">
+    <a href="{{sponsor.fields.link}}" target="_blank">
+      <img src="{{sponsor.fields.logo.fields.file.url + '?fm=webp&w=500'}}" width="100%" height="auto" alt="{{sponsor.fields.logo.fields.file.fileName}}">
     </a>
-    <h5>{{sponsor.name}}</h5>
-    <p [innerHTML]="sponsor.description | markdown"></p>
+    <h5>{{sponsor.fields.name}}</h5>
+    <p [innerHTML]="sponsor.fields.descriptionText | markdown"></p>
   </div>
 </div>
