add real links and 404 page and loading indicator

--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,11 +1,17 @@
-<div class="card">
-  <img *ngIf="!fullContent" class="card-img-top clickable" routerLink="news/{{article.sys.id}}" src="{{article.fields.image.fields.file.url + '?fm=webp&w=600'}}" alt="{{article.fields.image.fields.file.fileName}}">
+<div *ngIf="article" class="card">
+  <a *ngIf="!fullContent" href="{{'news/' + article.sys.id}}" routerLink="news/{{article.sys.id}}">
+    <img class="card-img-top clickable" src="{{article.fields.image.fields.file.url + '?fm=webp&w=600'}}" alt="{{article.fields.image.fields.file.fileName}}">
+  </a>
   <img *ngIf="fullContent" class="card-img-top" src="{{article.fields.image.fields.file.url + '?fm=webp&w=900' }}" alt="{{article.fields.image.fields.file.fileName}}">
   <div class="card-body">
-    <h5 *ngIf="!fullContent" class="card-title clickable" routerLink="news/{{article.sys.id}}">{{article.fields.title}}</h5>
+    <a *ngIf="!fullContent" href="{{'news/' + article.sys.id}}" routerLink="news/{{article.sys.id}}">
+      <h5 class="card-title clickable">{{article.fields.title}}</h5>
+    </a>
     <h5 *ngIf="fullContent" class="card-title" >{{article.fields.title}}</h5>
     <p class="text-muted">{{getDate(article.sys.createdAt)}}</p>
     <p class="card-text" [innerHTML]="content | markdown"></p>
-    <div *ngIf="!fullContent" class="show-more" routerLink="news/{{article.sys.id}}">Weiterlesen...</div>
+    <a *ngIf="!fullContent" href="{{'news/' + article.sys.id}}" routerLink="news/{{article.sys.id}}">
+      <div class="show-more">Weiterlesen...</div>
+    </a>
   </div>
 </div>
