--- a/src/app/components/news-detail/news-detail.component.scss
+++ b/src/app/components/news-detail/news-detail.component.scss
@@ -10,6 +10,26 @@ app-article {
   width: 100%
 }
 
+.article-not-found {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px
+}
+
+.back-button {
+  margin-top: 64px;
+}
+
+.loading-container {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width:960px) {
   app-article {
     width: 80%;
