--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -75,6 +75,13 @@ header {
   text-decoration: none;
 }
 
+.title > a, a:hover, a:focus, a:active {
+  color: $mtp-orange;
+  margin-left: 16px;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
 .title {
   display: flex;
   flex-direction: row;
